--- a/src/components/Search/styles.css
+++ b/src/components/Search/styles.css
@@ -28,7 +28,7 @@
 	width: 50px;
 	height: 53px;
 	background: white;
-	background-image: url('./icons/arrow-back.svg');
+	background-image: url('./arrow-back.svg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: 28px;
@@ -37,20 +37,4 @@
 
 .search-books-results {
 	padding: 80px 10px 20px;
-}
-
-/* books grid */
-
-.books-grid {
-	list-style-type: none;
-	padding: 0;
-	margin: 0;
-	display: flex;
-	justify-content: center;
-	flex-wrap: wrap;
-}
-
-.books-grid li {
-	padding: 10px 15px;
-	text-align: left;
 }
